[tool.poetry]
name = "dexscreener-crawling"
version = "0.1.0"
description = ""
authors = ["fullstackDEVH <huyhg2521@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium= "4.8.2"
selenium-stealth = "1.0.6"
undetected_chromedriver="3.4.6"
celery = "5.4.0"
redis = "5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
